--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="jumbotron" id="about">
         <div class="container">
           <h2 class="text-center">About</h2>
-            <img class="col-sm-12 col-md-5" src="pictures/outdoor_park.jpeg" alt="Park Grounds">
+            <img class="col-sm-12 col-md-5" src="outdoor_park.jpeg" alt="Park Grounds">
             <p class="col-sm-12 col-md-7">Welcome to Brooklyn Outdoor Film Festival,
               located at Brooklyn Bridge Park! This is where we will be hosting
             a number of films, vendors, and food all towards our love for the cinema.</p>
