--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Brooklyn Outdoor Film</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,19 +37,11 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="#home">Home</a></li>
-            <li><a href="#annoucements">Annoucements</a></li>
-            <li class="dropdown">
-              <a data-toggle="dropdown" href="#info">Information <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.nydailynews.com/new-york/brooklyn">City News</a></li>
-                <li><a href="https://www.brooklynbridgepark.org/">Park Info</a></li>
-                <li><a href="#movieList">Movie List</a></li>
-              </ul>
-            </li>
             <li><a href="#about">About</a></li>
+            <li><a href="#movieList">Movie List</a></li>
+            <li><a href="#annoucements">Annoucements &amp News</a></li>
             <li><a href="#registration">Registration</a></li>
           </ul>
-
           <div class="navbar-right">
             <a class="btn btn-default" href="http://www.facebook.com"><i class="fa fa-twitter fa-2x"></i></a>
             <a class="btn btn-default" href="http://www.twitter.com"><i class="fa fa-facebook fa-2x"></i></a>
@@ -63,74 +56,68 @@
       <div class="jumbotron" id="about">
         <div class="container">
           <h2 class="text-center">About</h2>
-            <img class="col-sm-12 col-md-5" src="pictures/outdoor_park.jpeg" alt="Park Grounds">
-            <p class="col-sm-12 col-md-7">Welcome to Brooklyn Outdoor Film Festival,
-              located at Brooklyn Bridge Park! This is where we will be hosting
-            a number of films, vendors, and food all towards our love for the cinema.</p>
+          <h4 class="text-center">Movies With a View</h4>
+            <img src="pictures/outdoor_park.jpeg" alt="Park Grounds" id="about_pic">
         </div>
       </div>
 
-      <div class="jumbotron" id="about">
+      <div class="jumbotron" id="movieList">
         <div class="container">
-          <h2 class="text-center">Annoucements &amp News</h2>
-          <h4 class="text-center">NYRR Open Run</h4>
-          <p>New York Road Runners invite you to join their free Tuesday night Open Runs!
-              Whether you’re a first time runner, a seasoned marathoner, or you prefer to walk,
-              you’re welcome along. No need to register in advance; sign-in takes place on site.
-              Volunteers track the timing and marshal the course, but please leave your valuables
-              at home as bag check is not provided. To participate, meet on the path south of
-              Fornino at Pier 6 at 6:45pm for registration. The run begins at 7:00pm and the
-              course comprises a full 5K.</p>
-
-            <h4 class="text-center">Additional Dates</h4>
-            <p>Due to popular demand, two additional dates have been added: August 7th &amp
-              August 8th.
-        </div>
-      </div>
-
-    <div class="jumbotron" id="movieList">
-      <div class="container">
-        <h2 class="text-center">Movie List</h2>
-        <div class="panel panel-primary">
-          <table class="table table-striped table-condensed">
-            <thead>
-              <tr>
-                <th>Title</th>
-                <th>Year Released</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Vertigo</td>
-                <td>1958</td>
-              </tr>
-              <tr>
-                <td>Citizen Kane</td>
-                <td>1941</td>
-              </tr>
-              <tr>
-                <td>Tokyo Story</td>
-                <td>1953</td>
-              </tr>
-              <tr>
-                <td>Sunrise: A Song of Two Humans</td>
-                <td>1927</td>
-              </tr>
-              <tr>
-                <td>La Regle du jeu</td>
-                <td>1939</td>
-              </tr>
-            </tbody>
-          </table>
+          <h2 class="text-center">Movie List</h2>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/the_godfather.jpg" alt="The GodFather">
+           <h4 class="text-center">The GodFather</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/shawshake_redemption.jpg" alt="The GodFather">
+           <h4 class="text-center">The Shawshank Redemption</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/schindlers_list.jpg" alt="The GodFather">
+           <h4 class="text-center">Schindler's List</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/raging_bull.jpg" alt="The GodFather">
+           <h4 class="text-center">Raging Bull</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/casablanca.jpg" alt="The GodFather">
+           <h4 class="text-center">Casablanca</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/citizen_cane.jpg" alt="The GodFather">
+           <h4 class="text-center">Citizen Kane</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/gone_with_the_wind.jpg" alt="The GodFather">
+           <h4 class="text-center">Gone with the Wind</h4>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+           <img src="pictures/the_wizard_of_oz.jpg" alt="The GodFather">
+           <h4 class="text-center">The Wizard of Oz</h4>
+          </div>
 
         </div>
       </div>
-    </div>
 
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="jumbotron" id="annoucements">
+          <div class="container">
+            <h2 class="text-center">Annoucements &amp News</h2>
+            <h4 class="text-center">NYRR Open Run</h4>
+            <a href="https://openrun.nyrr.org/#BrooklynBridgePark">
+              <img src="pictures/marathon_pic.jpg" alt="running_group">
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     <div class="jumbotron" id="registration">
       <div class="container">
 
-      <h2 class="text-center">Sign up now! Seats are limited to 5000 people!</h2>
+        <h2 class="text-center">Sign up now! Seats are limited to 5000 people!</h2>
       <form class="row">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Name">
@@ -144,45 +131,58 @@
 
       <h2 class="text-center">Night(s) Attending:</h2>
 
-      <div class="form-group col-lg-8">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <label class="custom-control">
           <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">August 5, 2018: 6pm - 12am</span>
+          <span class="custom-control-description">
+            August 5, 2018: 6pm - 12am<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;The GodFather<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;The Shawshank Redemption</span>
         </label>
       </div>
 
-      <div class="form-group col-lg-8">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <label class="custom-control">
           <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">August 6, 2018: 6pm - 12am</span>
+          <span class="custom-control-description">
+            August 6, 2018: 6pm - 12am<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Schindler's List<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Raging Bull</span>
         </label>
       </div>
 
-      <div class="form-group col-lg-8">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <label class="custom-control">
           <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">August 7, 2018: 6pm - 12am</span>
+          <span class="custom-control-description">
+            August 7, 2018: 6pm - 12am<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Casablanca<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Citizen Kane</span>
         </label>
       </div>
 
-      <div class="form-group col-lg-8">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <label class="custom-control">
           <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">August 8, 2018: 6pm - 12am</span>
+          <span class="custom-control-description">
+            August 8, 2018: 6pm - 12am<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;Gone with the Wind<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;The Wizard of Oz</span>
         </label>
       </div>
 
-      <div class="form-group col-lg-12">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <button type="submit" class="btn btn-default pull-right">Send</button>
       </div>
       </form>
 
     </div>
     </div>
+  </div>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
