--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
 
       <div class="jumbotron" id="about">
         <div class="container">
-          <h2 class="text-center">About</h2>
+          <h2 class="text-center">Brooklyn Film Festival</h2>
           <h4 class="text-center">Movies With a View</h4>
-            <img src="pictures/outdoor_park.jpeg" alt="Park Grounds" id="about_pic">
+          <img class="col-xs-6 col-sm-6 col-md-6 col-lg-6" src="pictures/outdoor_park.jpeg" alt="Park Grounds" id="about_pic">
+          <h6 class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-left">
+            Brooklyn Film Fest is a summer must! With its launch August 5th, 2018
+            we aimed to wow, entertain, and thrill new and old moviegoers,
+
+          </h6>
         </div>
       </div>
 
